# finguard

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-compose_build.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml
src/finguard/: __init__.py  config.py  df_operations.py  paths.py  plots.py  ui.py  ui_cashflow.py  ui_categories.py  ui_expenses.py  ui_helpers.py  ui_networth.py  ui_plots.py  ui_tables.py
