[project]
name = "finguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Angelo Ferrari", email = "angeloferrari@pm.me" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "polars>=1.38.1",
]

[project.scripts]
finguard = "finguard:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
